# tidy_simulation

./: LICENSE  README.md
R/: 01_tidy_simulation.R  01b_tidy_simulation_parallel.R  01c_tidy_simulation_parallel_chunked.R  02_tidy_analysis.R  README.md  tidy_simulation.Rproj
python/: 01_tidy_simulation.py  01a_tidy_simulation.py  01b_tidy_simulation_parallel.py  01c_tidy_simulation_parallel_chunked.py  02_tidy_analysis.py  README.md  grid.parquet  pyproject.toml
python/processed_data/: .gitignore
